openshift/kustomize/charts/base/deploy.yaml
---
# How the app will be deployed to the pod.
kind: Deployment
apiVersion: apps/v1
metadata:
  name: charts-api
  namespace: default
  annotations:
    description: Defines how to deploy charts-api
  labels:
    name: charts-api
    part-of: tno
    version: 1.0.0
    component: charts-api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  replicas: 1
  selector:
    matchLabels:
      name: charts-api
      part-of: tno
      component: charts-api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: charts-api
      labels:
        name: charts-api
        part-of: tno
        component: charts-api
    spec:
      imagePullSecrets:
        - name: acr-secret
      containers:
        - name: charts-api
          image: bcgov-c4awhwfpcremdbga.azurecr.io/charts-api:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              cpu: 35m
              memory: 100Mi
            requests:
              cpu: 20m
              memory: 75Mi
          livenessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: "/health"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            timeoutSeconds: 60
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
