openshift/kustomize/charts/base/network-policy.yaml
---
# Allow the app to communicate with the api.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: pod-from-pod-permit-charts-api
  namespace: default
  labels:
    name: charts-api
    part-of: tno
    version: 1.0.0
    component: charts-api
    managed-by: kustomize
    created-by: jeremy.foster
spec:
  #description: Allow charts-api pod(s) to receive communication from any pod(s).
  podSelector:
    matchLabels:
      solution: tno
      app: charts-api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              solution: tno
